Update npm package versions
npm i --save-dev @types/node@10 typescript@3.7 ts-node@8.5 tslint@5

Suggested version:

- node v10.16.3
- @types/node v10
- typescript v3.7
- tslint v5.20.1
- jasmine-core v2.99.1
- @types/jasmine v2.8.16
- protractor v5.4.2

注意事項

1. 不要任意將 `jasmine-core` 升級到任何 `v3` 版本，因為此版本跟 Protractor 有相依性
2. `@types/jasmine` 跟 `jasmine-core` 也有相依性，不能任意升級更新
3. `tslint` 到 `v6.0.0` 會有破壞性更新，因此不建議升級！
4. `node` 建議安裝 `v10.16.3` LTS 版本
5. `@types/node` 與選用的 Node.js 版本有相依性，升級時要注意！
6. `ts-node` 通常可以升級到最新版，因為幾乎沒有破壞性更新
7. `typescript` 升級到最新版應該沒差！

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Will <doggy.huang@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "~8.9.4",
+    "@types/node": "^10.17.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "blue-harvest": "^0.3.1",
@@ -19,8 +19,8 @@
     "jasmine-spec-reporter": "~4.2.1",
     "path": "^0.12.7",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.2.4"
+    "ts-node": "^8.5.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2"
   }
 }
